# esmock

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
esmock/: __init__.py  esmock.py  mocks.py
