[metadata]
name = esmock
author = spukst3r
author-email = spukst3r@null
summary = ElasticSearch mock server
description-file = README.md
home-page = https://github.com/spukst3r/esmock
version = 0.1.1
license = MIT
classifier =
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
keywords =
    setup
    distutils
[files]
packages =
    esmock
[entry_points]
console_scripts =
    run-esmock-server = esmock:esmockserver